some more updates

--- a/papers/ivs13/main.tex
+++ b/papers/ivs13/main.tex
@@ -85,7 +85,7 @@ email: \{jerome.maye, paul.furgale, roland.siegwart\}@mavt.ethz.ch}
 \input{src/conclusion.tex}
 
 \section*{Acknowledgment}
-This work has partly been supported by the EC under ....
+This work has partly been supported by the EC under FP7-269916-V-Charge.
 
 \bibliographystyle{sty/IEEEtran}
 \bibliography{bib/bibliography}
