--- a/papers/ivs13/src/conclusion.tex
+++ b/papers/ivs13/src/conclusion.tex
@@ -1,5 +1,5 @@
 In this paper, we have presented a novel approach to the automatic calibration
-of robot sensors. We have included the calibration parameters in a SLAM
+of mobile robot sensors. We have included the calibration parameters in a SLAM
 formulation and computed an MAP estimator using a Gauss-Newton algorithm. To
 cope with unobservability, we have employed truncated QR decomposition as a
 regularization method. For long-term and online operations, we have devised
@@ -9,6 +9,6 @@ tested and validated through extensive simulated and real-world experiments on
 a 2D robot equipped with a laser range finder.
 
 In the near future, we will consider the self calibration of multiple sensors
-(cameras, 3D/2D LRF, GPS/INS system) on our autonomous car. From a research
-point of view, we would like to further automate the selection of the free
-parameters. Lastly, we want to detect...\todo{To be discussed}.
+(cameras, 3D/2D LRF, GPS/INS system) mounted on an autonomous car. From a
+research point of view, we would like to further automate the selection of the
+free parameters. Lastly, we want to detect...\todo{To be discussed}.
