--- a/papers/ivs13/src/conclusion.tex
+++ b/papers/ivs13/src/conclusion.tex
@@ -9,6 +9,6 @@ tested and validated through extensive simulated and real-world experiments on
 a 2D robot equipped with a laser range finder.
 
 In the near future, we will consider the self calibration of multiple sensors
-(cameras, 3D/2D LRF, GPS/INS system) mounted on an autonomous car. From a
-research point of view, we would like to further automate the selection of the
-free parameters. Lastly, we want to detect...\todo{To be discussed}.
+(cameras, 3D/2D LRF, GPS/INS system) mounted on an autonomous car and a C++
+implementation. From a research point of view, we would like to further automate
+the selection of the free parameters. Lastly, we want to detect...\todo{To be discussed}.
