--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -231,3 +231,40 @@ from~\cite{fiore01efficient}.
   for the optimization.}
 \label{fig:dataset2-path-result}
 \end{figure}
+
+Since the ground truth calibration parameters are inaccurate,
+Tab.~\ref{tab:dataset2-comp} compares our method against a standard
+least-squares estimator that exploits all the measurements. Our TQR-MI algorithm
+performs the optimization with $K=1209$ out of $12609$ timesteps. Although the
+calibration parameters are the same magnitude, the higher variances stem
+from the fewer number of considered measurements.
+
+\begin{table}[!t]
+\renewcommand{\arraystretch}{1.3}
+\caption{Comparison of a standard least-squares estimator and our
+  method on the ``Lost in the Woods dataset''.}
+\label{tab:dataset2-comp}
+\centering
+\begin{tabular}{c||c||c}
+\hline
+& \bfseries LS & \bfseries TQR-MI\\
+\hline\hline
+$\hat{\delta}_x$ [m] & $0.2363$ & $0.2344$\\
+\hline
+$\hat{\delta}_y$ [m]& $0.0034$ & $0.0087$\\
+\hline
+$\hat{\psi}$ [rad] & $0.0810$ & $0.0754$\\
+\hline
+$\hat{\Sigma}_{\delta_x}$ [$\text{m}^2$] & $0.0892\times 10^{-5}$ &
+  $0.1903\times 10^{-4}$\\
+\hline
+$\hat{\Sigma}_{\delta_y}$ [$\text{m}^2$] & $0.39\times 10^{-5}$ &
+  $0.7243\times 10^{-4}$\\
+\hline
+$\hat{\Sigma}_{\psi}$ [$\text{rad}^2$] & $0.0254\times 10^{-5}$ &
+  $0.0582\times 10^{-4}$\\
+\hline
+$K$ & $12609$ & $1209$\\
+\hline
+\end{tabular}
+\end{table}
