Initial edit before experimental section

--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -9597,3 +9597,45 @@
   timestamp = {2010.03.11}
 }
 
+@article{kelly2011visual,
+  title={Visual-inertial sensor fusion: Localization, mapping and sensor-to-sensor self-calibration},
+  author={Kelly, J. and Sukhatme, G.S.},
+  journal={The International Journal of Robotics Research},
+  volume={30},
+  number={1},
+  pages={56--79},
+  year={2011},
+  publisher={SAGE Publications}
+}
+
+@article{hermann1977nonlinear,
+  title={Nonlinear controllability and observability},
+  author={Hermann, R. and Krener, A.},
+  journal={Automatic Control, IEEE Transactions on},
+  volume={22},
+  number={5},
+  pages={728--740},
+  year={1977},
+  publisher={IEEE}
+}
+
+@article{mirzaei2008kalman,
+  title={A Kalman filter-based algorithm for IMU-camera calibration: Observability analysis and performance evaluation},
+  author={Mirzaei, F.M. and Roumeliotis, S.I.},
+  journal={Robotics, IEEE Transactions on},
+  volume={24},
+  number={5},
+  pages={1143--1156},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{tong_crv12,
+	Address = {Toronto, Canada},
+	Author = {Chi Hay Tong and Paul T Furgale and Timothy D Barfoot},
+	Booktitle = {9th Canadian Conference on Computer and Robot Vision (CRV)},
+	Doi = {10.1109/CRV.2012.35},
+	Month = {28-30 May},
+	Pages = {206-213},
+	Title = {Gaussian Process Gauss-Newton: Non-Parametric State Estimation},
+	Year = 2012}
