--- a/papers/ivs13/src/related.tex
+++ b/papers/ivs13/src/related.tex
@@ -5,14 +5,14 @@ recovering \emph{intrisic}, e.g. focal length for a camera, and \emph{extrinsic}
 parameters, i.e. the rigid transformation between the sensor's coordinate system
 and a reference coordinate system. For the former, one could devise a naive
 approach where the parameters are accurately determined during the manufacturing
-process. In the same vein, the transformation could be retrieved by means of
+process. Similarly, the transformation could be retrieved by means of
 some measuring instrument. However, the disadvantages of such purely
-engineered methods are manifolds. Apart from their impracticality, it can be
+engineered methods are manifold. Apart from their impracticality, it can be
 nearly impossible to reach a satisfying accuracy and thus hinder the proper use
 of the sensor in a robotic system. Furthermore, external factors such as
 temperature variations or mechanical shocks may seriously bias a factory
 calibration. Therefore, much efforts have been dedicated over the years to
-develop algorithms easing custom calibration on the field.
+develop algorithms for calibration of systems in the field.
 
 The use of a known calibration pattern such as a checkerboard coupled with
 non-linear regression has become the most popular method in computer vision
